docs-archive/apache-airflow-providers-openlineage/2.3.0/_sources/_api/airflow/providers/openlineage/plugins/adapter/index.rst.txt
airflow.providers.openlineage.plugins.adapter
=============================================

.. py:module:: airflow.providers.openlineage.plugins.adapter


Classes
-------

.. autoapisummary::

   airflow.providers.openlineage.plugins.adapter.OpenLineageAdapter


Module Contents
---------------

.. py:class:: OpenLineageAdapter(client = None, secrets_masker = None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Translate Airflow metadata to OpenLineage events instead of creating them from Airflow code.


   .. py:method:: get_or_create_openlineage_client()


   .. py:method:: get_openlineage_config()


   .. py:method:: build_dag_run_id(dag_id, logical_date, clear_number)
      :staticmethod:



   .. py:method:: build_task_instance_run_id(dag_id, task_id, try_number, logical_date, map_index)
      :staticmethod:



   .. py:method:: emit(event)

      Emit OpenLineage event.

      :param event: Event to be emitted.
      :return: Redacted Event.



   .. py:method:: start_task(run_id, job_name, job_description, event_time, code_location, nominal_start_time, nominal_end_time, owners, task, run_facets = None)

      Emit openlineage event of type START.

      :param run_id: globally unique identifier of task in dag run
      :param job_name: globally unique identifier of task in dag
      :param job_description: user provided description of job
      :param event_time:
      :param code_location: file path or URL of DAG file
      :param nominal_start_time: scheduled time of dag run
      :param nominal_end_time: following schedule of dag run
      :param owners: list of owners of DAG
      :param task: metadata container with information extracted from operator
      :param run_facets: custom run facets



   .. py:method:: complete_task(run_id, job_name, end_time, task, run_facets = None)

      Emit openlineage event of type COMPLETE.

      :param run_id: globally unique identifier of task in dag run
      :param job_name: globally unique identifier of task between dags
      :param end_time: time of task completion
      :param task: metadata container with information extracted from operator
      :param run_facets: additional run facets



   .. py:method:: fail_task(run_id, job_name, end_time, task, error = None, run_facets = None)

      Emit openlineage event of type FAIL.

      :param run_id: globally unique identifier of task in dag run
      :param job_name: globally unique identifier of task between dags
      :param end_time: time of task completion
      :param task: metadata container with information extracted from operator
      :param run_facets: custom run facets
      :param error: error
      :param run_facets: additional run facets



   .. py:method:: dag_started(dag_id, logical_date, start_date, nominal_start_time, nominal_end_time, owners, run_facets, clear_number, description = None, job_facets = None)


   .. py:method:: dag_success(dag_id, run_id, end_date, logical_date, clear_number, dag_run_state, task_ids, run_facets)


   .. py:method:: dag_failed(dag_id, run_id, end_date, logical_date, clear_number, dag_run_state, task_ids, msg, run_facets)


